--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,5 +1,5 @@
 .product {
-  padding: 0 !important;
+  padding: 0;
 
   .card {
     margin: 15px;
@@ -7,6 +7,7 @@
     .card-title {
       height: 50px;
     }
+
     .btn {
       width: 100%;
       background-color: transparent;
@@ -18,7 +19,7 @@
       &:active,
       &:focus {
         background-color: #0098d3 !important;
-        border-color: #0098d3 !important;
+        border-color: #0098d3;
         color: #fff;
         box-shadow: none !important;
       }
